# Golang

./: .gitignore  README.md
matrix/: matrix.go
nnl/: go.mod  main.go
nnl/src/neuralnetwork/: neuralNetwork.go
nnl/src/neuralnetwork/layer/: layer.go
nnl/src/neuralnetwork/matrix/: matrix.go
nnl/src/trainingdata/: trainingData.go
nnlcpp/: CMakeLists.txt  launch.sh
nnlcpp/inc/: layer.hpp  matrix.hpp  neuralnetwork.hpp
nnlcpp/src/: layer.cpp  main.cpp  matrix.cpp  neuralnetwork.cpp
